# meilisearch-rust

./: .code-samples.meilisearch.yaml  .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl  bors.toml  docker-compose.yml
.github/: dependabot.yml  release-draft-template.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: check-release.sh
.github/workflows/: coverage.yml  pre-release-tests.yml  publish.yml  rust.yml  tests.yml
contrib/: README.md
contrib/browser-client/: Cargo.toml
contrib/browser-client/src/: lib.rs
contrib/isahc-client/: Cargo.toml
contrib/isahc-client/src/: lib.rs
examples/: settings.rs
examples/cli-app/: Cargo.toml
examples/cli-app-with-awc/: Cargo.toml
examples/cli-app-with-awc/src/: main.rs
examples/cli-app-with-reqwest/: Cargo.toml
examples/cli-app-with-reqwest/assets/: clothes.json
examples/cli-app-with-reqwest/src/: main.rs
examples/cli-app/assets/: clothes.json
examples/cli-app/src/: main.rs
examples/web_app/: Cargo.toml  README.md
examples/web_app/pkg/: index.html
examples/web_app/src/: document.rs  lib.rs
examples/web_app_graphql/: .env.example.txt  .gitignore  Cargo.toml  README.md  Readme.md
examples/web_app_graphql/migrations/2023-12-20-105441_users/: down.sql  up.sql
examples/web_app_graphql/src/: app_env_vars.rs  lib.rs  main.rs  models.rs  schema.rs
examples/web_app_graphql/src/errors/: mod.rs
examples/web_app_graphql/src/graphql_schema/: mod.rs
examples/web_app_graphql/src/graphql_schema/users/: get_users.rs  mod.rs  search.rs
examples/web_app_graphql/src/graphql_schema/users/mutation/: add_user.rs  mod.rs
examples/web_app_graphql/src/graphql_schema/users/query/: get_users.rs  mod.rs  search.rs
meilisearch-index-setting-macro/: Cargo.toml  main.rs
meilisearch-index-setting-macro/src/: lib.rs
meilisearch-index-setting-macro/tests/: 01-parse.rs  index.rs
meilisearch-test-macro/: Cargo.toml  README.md
meilisearch-test-macro/src/: lib.rs
scripts/: check-code-samples.py  check-code-samples.sh  check-readme.sh  generate_tests.rs  update-readme.sh  update_macro_versions.sh
src/: .client.rs.pending-snap  batches.rs  chats.rs  client.rs  config.rs  document.rs  documents.rs  dumps.rs  errors.rs  export.rs  features.rs  fields.rs  indexes.rs  key.rs  lib.rs  logs.rs  network.rs  prelude.rs  progress.rs  request.rs  reqwest.rs  search.rs  settings.rs  similar.rs  snapshots.rs  task_info.rs  tasks.rs  tenant_tokens.rs  utils.rs  webhooks.rs
src/request/: isahc_native_client.rs  native_client.rs  request_client_impl.rs  reqwest_native_client.rs  wasm_client.rs
tests/: tests.rs
