[package]
name = "meilisearch-sdk"
version = "0.32.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"
description = "Rust wrapper for the Meilisearch API. Meilisearch is a powerful, fast, open-source, easy to use and deploy search engine."
license = "MIT"
readme = "README.md"
repository = "https://github.com/meilisearch/meilisearch-sdk"
resolver = "2"

[workspace]
members = ["examples/*"]

[dependencies]
async-trait = "0.1.88"
iso8601 = "0.6.3"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["serde-well-known", "formatting", "parsing"] }
yaup = "0.3.1"
either = { version = "1.15.0", features = ["serde"] }
thiserror = "2.0.12"
meilisearch-index-setting-macro = { path = "meilisearch-index-setting-macro", version = "0.32.0" }
pin-project-lite = { version = "0.2.16", optional = true }
reqwest = { version = "0.13.1", optional = true, default-features = false, features = ["http2", "stream"] }
bytes = { version = "1.10.1", optional = true }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
futures-core = "0.3.31"
futures-io = "0.3.31"
futures-channel = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["io"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonwebtoken = { version = "10.2.0", default-features = false }
tokio = { version = "1.38", optional = true, features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.17.0", default-features = false, features = ["v4", "js", "serde"] }
web-sys = "0.3.77"
wasm-bindgen-futures = "0.4"

[features]
default = ["reqwest", "tls", "jwt_aws_lc_rs"]
reqwest = ["dep:reqwest", "dep:tokio", "pin-project-lite", "bytes"]
tls = ["reqwest/rustls-tls"]
futures-unsend = []
jwt_aws_lc_rs = ["jsonwebtoken/aws_lc_rs"]
jwt_rust_crypto = ["jsonwebtoken/rust_crypto"]

[dev-dependencies]
futures-await-test = "0.3"
futures = "0.3"
mockito = "1.0"
meilisearch-test-macro = { path = "meilisearch-test-macro" }
tokio = { version = "1.46", features = ["rt", "macros"] }

# The following dependencies are required for examples
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = "0.21"
lazy_static = "1.4"
web-sys = "0.3"
console_error_panic_hook = "0.1"
big_s = "1.0.2"
insta = "1.38.0"
