[package]
name = "meilisearch-index-setting-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.102", features = ["extra-traits"] }
quote = "1.0.21"
proc-macro2 = "1.0.46"
async-trait = "0.1.57"

[dev-dependencies]
meilisearch-sdk = "0.20.1"

