[package]
name = "meilisearch-index-setting-macro"
version = "0.28.0"
description = "Helper tool to generate settings of a Meilisearch index"
edition = "2021"
license = "MIT"
repository = "https://github.com/meilisearch/meilisearch-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.48", features = ["extra-traits"] }
quote = "1.0.21"
proc-macro2 = "1.0.46"
convert_case = "0.6.0"
structmeta = "0.3"
