[package]
name = "browser-client"
version = "0.1.0"
edition = "2021"

[dependencies]
meilisearch-sdk = { path = "../../" }

async-trait = "0.1.51"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
url = "2"
log = "0.4"
js-sys = "0.3.47"
web-sys = { version = "0.3", features = ["RequestInit", "Headers", "Window", "Response", "console" ] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0.37"
