[package]
name = "isahc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
meilisearch-sdk = { path = "../../" }

async-trait = "0.1.51"
futures-io = "0.3.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
url = "2"
isahc = { version = "1.0", default_features = false, features = ["http2", "text-decoding"] }
derive_more = "0.99"
