[package]
name = "cli-app"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meilisearch-sdk = {path="../.."}
futures = "0.3"
serde = { version="1.0",   features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
yaup = "0.2.0"
