[package]
name = "web_app"
version = "0.1.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.18"
yew = "0.17"
meilisearch-sdk = {path="../.."}
serde = {version="1.0", features=["derive"]}
web-sys = "0.3"
console_error_panic_hook = "0.1"
