[package]
name = "web_app"
version = "0.0.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.18"
yew = {version="0.21", features = ["csr"]}
meilisearch-sdk = {path="../.."}
lazy_static = "1.4"
serde = {version="1.0", features=["derive"]}
web-sys = "0.3"
console_error_panic_hook = "0.1"
